--- a/vignettes/Week3_Gene_Flow/Week3_vignette.Rmd
+++ b/vignettes/Week3_Gene_Flow/Week3_vignette.Rmd
@@ -44,14 +44,13 @@ Microsatellite data for 181 individuals of Colombia spotted frogs (Rana luteiven
 All required packages should have been installed already when you installed 'LandGenCourse'.
 
 ```{r message=FALSE, warning=TRUE}
-require(adegenet)
+#require(adegenet)
 require(LandGenCourse)
-require(pegas)       
-require(sp)
-require(PopGenReport)
+#require(pegas)       
+#require(sp)
+#require(PopGenReport)
 require(dplyr)
 require(poppr) 
-require(here)
 ```
 
 ## 2. Basic checking of markers and populations
@@ -333,6 +332,7 @@ Frogs.diversity
 You can save the R object 'Frogs.diversity' with the code below (need to uncomment by removing the hashtags '#'):
 
 ```{r}
+#require(here)
 #if(!dir.exists(paste0(here(),"/output"))) dir.create(paste0(here(),"/output"))
 #save(Frogs.diversity, file = paste0(here(),"/output/Frogs.diversity.RData"))
 #load(paste0(here(),"/output/Frogs.diversity.RData"))
@@ -360,4 +360,13 @@ The allele frequencies of all alleles from the same locus (e.g., A.1, A.2 and A.
 
 ```{r}
 apply(Freq, MARGIN = 1, FUN = sum)    # Just checking
+```
+
+
+
+```{r message=FALSE, warning=TRUE, include=FALSE}
+detach("package:poppr", unload=TRUE)
+detach("package:dplyr", unload=TRUE)
+detach("package:adegenet", unload=TRUE)
+detach("package:ade4", unload=TRUE)
 ```
