--- a/vignettes/Week3_Gene_Flow/Week3_vignette.Rmd
+++ b/vignettes/Week3_Gene_Flow/Week3_vignette.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Week 3: Genetic Diversity"
-author: "Helene Wagner"
+author: 
+- "Helene Wagner"
+- "Melanie Murphy"
 date: "`r Sys.Date()`"
 show_toc: true
 output:
@@ -134,7 +136,6 @@ We write the results into a data frame 'Prop.loci.out.of.HWE' and use '=' to spe
 
 ```{r}
 alpha=0.05
-#alpha=0.05/(nrow(HWE.test) * ncol(HWE.test))   # Optional Bonferroni correction
 Prop.loci.out.of.HWE <- data.frame(Chisq=apply(HWE.test.chisq<alpha, 2, mean), 
            MC=apply(HWE.test.MC<alpha, 2, mean))
 Prop.loci.out.of.HWE             # Type this line again to see results table
@@ -153,6 +154,27 @@ The results suggest that:
 - No locus is consistently out of HWE across populations (loci probably not affected by selection).
 - No population is consistently out of HWE across loci (probably no recent major bottlenecks/ founder effects).
 
+Let's repeat this with 'false discovery rate' correction for the number of tests. Here we use the function 'p.adjust' with the argument 'method="fdr"' to adjust the p-values from the previous tests. This returns a vector of length 96 (the number of p-values used), which we convert back into a matrix of 12 rows (pops) by 8 columns (loci). Then we procede as above.
+
+```{r}
+
+Chisq.fdr <- matrix(p.adjust(HWE.test.chisq,method="fdr"), 
+                    nrow=nrow(HWE.test.chisq))
+MC.fdr <- matrix(p.adjust(HWE.test.MC, method="fdr"), 
+                    nrow=nrow(HWE.test.MC))
+
+Prop.pops.out.of.HWE <- data.frame(Chisq=apply(HWE.test.chisq<alpha, 1, mean), 
+           MC=apply(HWE.test.MC<alpha, 1, mean),
+           Chisq.fdr=apply(Chisq.fdr<alpha, 1, mean),
+           MC.fdr=apply(MC.fdr<alpha, 1, mean))
+Prop.pops.out.of.HWE             
+```
+
+After using false discovery rate correction for the 8 * 12 = 96 tests performed, very few combinations of locus and population were out of HWE based on the chi-squared test, and none with the MC test. 
+
+Note: exact results are likely to differ somewhat between runs due to the permutation tests.
+
+
 ### d) Check for linkage disequilibrium (LD)
 See also: https://grunwaldlab.github.io/Population_Genetics_in_R/Linkage_disequilibrium.html
 
@@ -162,7 +184,7 @@ This step is especially important when developing a new set of markers. You may 
 
 Here, we start with performing an overall test of linkage disequilibrium (the null hypothesis is that there is no linkage among the set of markers). Two indices are calculated and tested: an index of association (Ia; Brown et al. 1980) and a measure of correlation (rbarD; Agapow and Burt 2001), which is less biased (see URL above). The number of permutations is specified by 'sample = 199'.
 
-Overall, there is statistically significant association among the markers (p-value: prD = 0.005; also left figure). Recall that the power of a statistical increases with sample size, and here we have n = 181, hence even a small effect may be statistically significant. Hence we look at effect size, i.e., the actual strength of the pairwise associations (right figure). 
+Overall, there is statistically significant association among the markers (p-value: prD = 0.005; also left figure). Recall that the power of a statistical test increases with sample size, and here we have n = 181, hence even a small effect may be statistically significant. Hence we look at effect size, i.e., the actual strength of the pairwise associations (right figure). 
 
 ```{r, fig.show='hold'}
 poppr::ia(Frogs.genind, sample=199)
@@ -176,7 +198,7 @@ Effect size: If rbarD can be interpreted similarly to a linear correlation coeff
 
 ### e) Check for null alleles
 
-See also: http://www.nature.com/articles/6800545
+See also Dakin and Avise (2004): http://www.nature.com/articles/6800545
 
 One potential drawback for microsatellites as molecular markers is the presence of null alleles that fail to amplify, thus they couldn't be detected in the PCR assays.
 
@@ -213,9 +235,9 @@ round(Null.alleles$null.allele.freq$summary1,2)}
 round(Null.alleles$null.allele.freq$summary2,2)}   
 ```
 
-For this example, both methods suggest that there may be null alleles in most (summary1) or all loci (summary2). However, the estimates of the frequency of null alleles differ a lot between the two methods.
+For this example, both methods suggest that there may be null alleles in most loci. However, the estimates of the frequency of null alleles differ a lot between the two methods.
 
-WHAT TO DO WITH THIS INFORMATION?
+WHAT TO DO WITH THIS INFORMATION? Ask Melanie!
 
 ## 3. Assess genetic diversity 
 
@@ -223,7 +245,7 @@ These measures are typically quantified per population.
 
 ### a) Rarefied allelic richness 
 
-Nominal sample size (number of frogs sampled) and valid sample size (e.g., for each locus, the number of frogs with non-missing genetic data) vary between sites. 
+Both nominal sample size (number of frogs sampled) and valid sample size (e.g., for each locus, the number of frogs with non-missing genetic data) vary between sites. We would expect the number of alleles found in a population to increase with the number of individuals genotyped. 
 
 We can check this by plotting allelic richness against sample size. Here we create an object 'Sum' that contains the summary of the genind object, then we can access its elements by '$' to plot what we need. The function 'names' lists the names of the elements, which reduced the guesswork.
 
@@ -252,14 +274,13 @@ Hence we should not compare allelic richness directly. Instead, we'll use rarefi
 
 By default, the function 'allel.rich' finds the lowest valid sample size across all populations and loci, and multiplies it by the ploidy level. The number is stored as 'Richness$alleles.sampled' (here: 3 individuals * 2 alleles = 6 alleles). Alternatively, this number can be set with the 'min.alleles' argument.  
 
-Populations with more alleles are resampled to determine the average allelic richness among the minimum number of allels. Here, this means that 6 alleles are sampled from each population, allelic richness is calculated, and the process is repeated many times to determine the average).
-
 
 ```{r}
 Richness <- PopGenReport::allel.rich(Frogs.genind, min.alleles = NULL)
-Richness
+Richness$alleles.sampled
 ```  
-Note: 'pop.sizes' here refers to the number of (non-missing) alleles, not individuals.
+
+Populations with more alleles are resampled to determine the average allelic richness among the minimum number of allels. Here, this means that 6 alleles are sampled from each population, allelic richness is calculated, and the process is repeated many times to determine the average).
 
 Let's plot the results again. The barchart shows that there is considerable variation in genetic diversity among ponds. The scatterplot against sample size (here: for each population, the average number of valid alleles across loci) suggests that the variation is not related to sample size. The regression line (red) is almost horizontal.
 
@@ -308,7 +329,7 @@ Locus F shows variation only in two populations (i.e., Hexp = 0 in 10 population
 
 Let's plot the average across all loci for each population:
 
-Here we use 'apply' to apply the function 'mean' to the rows (MARGIN = 1). For columns, use '2'.
+Here we use 'apply' to apply the function 'mean' to the rows (MARGIN = 1). For columns, use 'MARGIN = 2'.
 
 ```{r, fig.show='hold'} 
   par(mar=c(5.5, 4.5, 1, 1))
